good stopping point

--- a/portfolio_app/data/FIFA_data_prep.ipynb
+++ b/portfolio_app/data/FIFA_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 215,
    "id": "5420c0c4",
    "metadata": {
     "scrolled": false
@@ -25,6 +25,8 @@
     "        self.database_name  = database_name\n",
     "        self.table_name     = table_name\n",
     "        self.from_scratch   = process_from_scratch\n",
+    "        self.connection     = None\n",
+    "        self.cursor         = None\n",
     "\n",
     "        self.sysdata   = [\"sofifa_id\",  'real_face', 'player_url', 'year']\n",
     "        self.constants = ['short_name','long_name', 'dob']\n",
@@ -89,7 +91,7 @@
     "                               left_on = \"sofifa_id\", right_on = \"sofifa_id\", how = \"left\")\n",
     "        self.master_df = master_df.copy()[~pd.isnull(master_df[\"club_name\"])]\n",
     "        for colname in [\"short_name\", \"long_name\", \"club_name\", \"league_name\", \"loaned_from\"]:\n",
-    "            self.master_df[colname] = self.master_df[colname].apply(lambda x: x.replace(\"'\", \"\"))\n",
+    "            self.master_df[colname] = self.master_df[colname].apply(lambda x: x.replace(\"'\", \"\") if type(x) == str else x)\n",
     "        print(\"Successfully applied data quality fixes\\n\")\n",
     "\n",
     "    def apply_tags(self):\n",
@@ -153,106 +155,444 @@
     "        return statement\n",
     "    \n",
     "    def upload_to_database(self):\n",
+    "        self.set_database_connection()\n",
     "        self.failed_attempts = []\n",
-    "        connection = sqlite3.connect(self.database_name)\n",
-    "        cursor = connection.cursor()\n",
     "        if self.from_scratch == True:\n",
     "            print(\"Dropping table\")\n",
-    "            cursor.execute(f\"DROP TABLE IF EXISTS {self.table_name};\")\n",
+    "            self.cursor.execute(f\"DROP TABLE IF EXISTS {self.table_name};\")\n",
     "            print(\"Successfully dropped table\\n\")\n",
     "        print(\"Creating table\")\n",
-    "        cursor.execute(self.create_sql_statement())\n",
+    "        self.cursor.execute(self.create_sql_statement())\n",
     "        print(\"Successfully created table\\n\")\n",
     "        print(\"Inserting data into table\")\n",
     "        for i in tqdm(range(len(self.master_df))):\n",
-    "            try:\n",
-    "                cursor.execute(self.insert_sql_statement(self.master_df.iloc[i, :]))\n",
-    "                connection.commit()\n",
-    "            except:\n",
-    "                self.failed_attempts.append(self.master_df.iloc[i, :])\n",
+    "            self.cursor.execute(self.insert_sql_statement(self.master_df.iloc[i, :]))\n",
     "        print(\"Successfully inserted data into table\\n\")\n",
-    "        connection.commit()\n",
-    "        connection.close()"
+    "        self.connection.commit()\n",
+    "\n",
+    "    def set_database_connection(self):\n",
+    "        self.connection = sqlite3.connect(self.database_name)\n",
+    "        self.cursor = self.connection.cursor()\n",
+    "\n",
+    "    def end_database_connections(self):\n",
+    "        if self.connection is not None:\n",
+    "            self.connection.close()\n",
+    "        self.connection = None\n",
+    "        self.cursor = None\n",
+    "\n",
+    "    def select_from_database(self, listed_columns = [], return_as = \"raw\"):\n",
+    "        if self.connection is None:\n",
+    "            self.set_database_connection()\n",
+    "        base = \"SELECT \"\n",
+    "        if len(listed_columns) > 0:\n",
+    "            for i in listed_columns:\n",
+    "                base += f\"{i}, \"\n",
+    "            base = base.strip()[:-1].strip() + \" FROM players\"\n",
+    "        else:\n",
+    "            base += f\"* FROM players\"\n",
+    "        output = self.cursor.execute(base)\n",
+    "        df_columns = [i[0] for i in output.description]\n",
+    "        output = output.fetchall()\n",
+    "        if return_as == \"DataFrame\":\n",
+    "            output = pd.DataFrame(output, columns = df_columns)\n",
+    "        return output\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 216,
    "id": "bb85beb5",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing data\n",
-      "Successfully imported data\n",
-      "\n",
-      "Applying data quality fixes\n",
-      "Successfully applied data quality fixes\n",
-      "\n",
-      "Applying transformation to 'player_tags'\n",
-      "Successfully applied transformation to 'player_tags'\n",
-      "\n",
-      "Applying transformation to 'player_traits'\n",
-      "Successfully applied transformation to 'player_traits'\n",
-      "\n",
-      "Replacing null values\n",
-      "Successfully replaced null values\n",
-      "\n",
-      "Dropping table\n",
-      "Successfully dropped table\n",
-      "\n",
-      "Creating table\n",
-      "Successfully created table\n",
-      "\n",
-      "Inserting data into table\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 121272/121272 [00:48<00:00, 2484.73it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully inserted data into table\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "FIFA = FIFA_Processing(\n",
     "    database_name = \"fifa.db\",\n",
     "    table_name = \"players\",\n",
-    "    process_from_scratch = True\n",
+    "    process_from_scratch = False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b65451",
+   "id": "6d1d7498",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
+   "id": "f8ef9be2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019a0823",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55c00aca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df57423",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa519cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dab1e82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0828931a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e12f258",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4475798",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab293d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "808ae26e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84238b52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85960099",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "e978e87b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sofifa_id</th>\n",
+       "      <th>short_name</th>\n",
+       "      <th>club_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>158023</td>\n",
+       "      <td>L. Messi</td>\n",
+       "      <td>FC Barcelona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20801</td>\n",
+       "      <td>Cristiano Ronaldo</td>\n",
+       "      <td>Real Madrid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9014</td>\n",
+       "      <td>A. Robben</td>\n",
+       "      <td>FC Bayern München</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>41236</td>\n",
+       "      <td>Z. Ibrahimović</td>\n",
+       "      <td>Paris Saint-Germain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>167495</td>\n",
+       "      <td>M. Neuer</td>\n",
+       "      <td>FC Bayern München</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121267</th>\n",
+       "      <td>256679</td>\n",
+       "      <td>K. Angulo</td>\n",
+       "      <td>América de Cali</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121268</th>\n",
+       "      <td>257710</td>\n",
+       "      <td>Zhang Mengxuan</td>\n",
+       "      <td>Chongqing Dangdai Lifan FC SWM Team</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121269</th>\n",
+       "      <td>250989</td>\n",
+       "      <td>Wang Zhenghao</td>\n",
+       "      <td>Tianjin TEDA FC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121270</th>\n",
+       "      <td>257697</td>\n",
+       "      <td>Chen Zitong</td>\n",
+       "      <td>Shijiazhuang Ever Bright F.C.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121271</th>\n",
+       "      <td>257936</td>\n",
+       "      <td>Song Yue</td>\n",
+       "      <td>Tianjin TEDA FC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>121272 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sofifa_id         short_name                            club_name\n",
+       "0          158023           L. Messi                         FC Barcelona\n",
+       "1           20801  Cristiano Ronaldo                          Real Madrid\n",
+       "2            9014          A. Robben                    FC Bayern München\n",
+       "3           41236     Z. Ibrahimović                  Paris Saint-Germain\n",
+       "4          167495           M. Neuer                    FC Bayern München\n",
+       "...           ...                ...                                  ...\n",
+       "121267     256679          K. Angulo                      América de Cali\n",
+       "121268     257710     Zhang Mengxuan  Chongqing Dangdai Lifan FC SWM Team\n",
+       "121269     250989      Wang Zhenghao                      Tianjin TEDA FC\n",
+       "121270     257697        Chen Zitong        Shijiazhuang Ever Bright F.C.\n",
+       "121271     257936           Song Yue                      Tianjin TEDA FC\n",
+       "\n",
+       "[121272 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = pd.DataFrame(output, columns = [\"sofifa_id\", \"short_name\", \"club_name\"])\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1927c89e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc456188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e5cb737",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "43b890c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FIFA_Processing' object has no attribute 'cursor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/adamandrew/Programming/Repos/Portfolio/portfolio_app/data/FIFA_data_prep.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adamandrew/Programming/Repos/Portfolio/portfolio_app/data/FIFA_data_prep.ipynb#X56sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mif\u001b[39;00m FIFA\u001b[39m.\u001b[39;49mcursor:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adamandrew/Programming/Repos/Portfolio/portfolio_app/data/FIFA_data_prep.ipynb#X56sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m1\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adamandrew/Programming/Repos/Portfolio/portfolio_app/data/FIFA_data_prep.ipynb#X56sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FIFA_Processing' object has no attribute 'cursor'"
+     ]
+    }
+   ],
+   "source": [
+    "if FIFA.cursor:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f98c1229",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd0f331",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c930d023",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd6337cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f645b037",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed7d9911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e39fd6a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52cc96b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af6ceec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebb535b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
    "id": "50d963fb",
    "metadata": {},
    "outputs": [
